--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "homepage": "http://jmieczni.github.io/passkeeper",
   "dependencies": {
     "react": "^16.3.1",
-    "react-dom": "^16.3.1"
+    "react-bootstrap": "^0.32.1",
+    "react-dom": "^16.3.1",
+    "react-router-dom": "^4.2.2"
   },
   "devDependencies": {
     "gh-pages": "^1.1.0",
