--- a/passkeep/src/backend/main/resources/application.properties
+++ b/passkeep/src/backend/main/resources/application.properties
@@ -8,9 +8,4 @@ spring.datasource.password=cs252team152018
 spring.jpa.database = MYSQL
 spring.jpa.show-sql = true
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=boilerscout.noreply@gmail.com
-spring.mail.password=BoilerScout201815
-spring.mail.properties.mail.smtp.auth=true
-spring.mail.properties.mail.smtp.starttls.enable=true
+server.port=${PORT:5000}
